style: Adiciona o input submit para envio do formulário

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <div>
         <h1>PostPage</h1>
     </div>
-    <form>
+    <form id="formPost">
         <label for="titlePost">Titulo do Post</label>
         <input type="text" name="titlePost" id="titlePost">
         <label for="contentPost">Conteúdo do Post</label>
         <textarea name="contentPost" id="contentPost"></textarea>
+
+        <input type="submit" id="btnSubmit" value="Envir Post">
     </form>
 
     <main>
@@ -24,6 +26,6 @@
     </main>
 
 
-
+<script src="/script.js"></script>
 </body>
 </html>
